# restify

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.cargo/: config
src/: doc_str.rs  failed_command.rs  lib.rs  rest_api.rs
src/attributes/: attr_slice.rs  attrs.rs  command.rs  compiled.rs  kinds.rs  mod.rs
src/attributes/commands/: log.rs  mod.rs  validate.rs
src/generators/: header.rs  mod.rs  query.rs  reqres.rs  request.rs  response.rs  tools.rs
src/parse/: mod.rs  parsed.rs
src/parsers/: attribute.rs  attributes.rs  endpoint.rs  endpoint_method.rs  mod.rs  rest_enum.rs  rest_struct.rs  struct_parameter.rs  tools.rs
src/utils/: doc_str.rs  fmt.rs  format_string.rs  mod.rs
tests/: 01_basic_usage.rs  api_macros.rs  mod.rs
tests/doc_str/: a_basic_usage.rs
tests/rest_api/: a_basic_usage.rs  mod.rs
