[package]
name = "api-endpoint"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true
name = "apie_macro"
path = "src/lib.rs"

[dependencies]
quote = "1.0.36"
syn = { version = "2.0.59", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
proc-macro2 = "1.0.81"

[dev-dependencies]
trybuild = "1.0.91"
