[package]
name = "restify"
version = "0.1.0"
edition = "2021"
authors = ["Tyler Aldrich"]
description = "A powerful procedural macro designed to streamline the development and compilation of client-side RESTful API interactions in Rust."
license = "MIT license"
repository = "https://github.com/TylerAldrich814/restify"
readme = "README.md"
keywords = ["ProcMacro", "REST", "ClientSide", "Generator", "DevTool"]
categories = [ "development-tools", "api-bindings", "web-programming::http-client", "text-processing", "compilers" ]

[lib]
proc-macro = true
name = "rest_macros"
path = "src/lib.rs"


[dependencies]
quote = "1.0.36"
syn = { version = "2.0.59", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
proc-macro2 = "1.0.81"
serde_qs = "0.13.0"
displaydoc = "0.2.4"
lazy_static = "1.4.0"
env_logger = "0.11.3"
log = "0.4.21"
regex = "1.10.4"

[dev-dependencies]
trybuild = "1.0.9"
